ported all internal changes from recent refactors of 1.20